--- a/custom.css
+++ b/custom.css
@@ -1,12 +1,17 @@
 /* Custom CSS */
 
+.title-slide h1 {
+    text-align: left;
+    margin-left: 15px;
+}
+
 .title-slide h2 {
     margin-top: -25px;
     padding-bottom: -20px;
     text-shadow: none;
     font-weight: 300;
     font-style: italic;
-    font-size: 25px;
+    font-size: 21px;
     text-align: left;
     margin-left: 15px;
 }
@@ -18,9 +23,17 @@
 .title-slide h3 {
     text-shadow: none;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 3em;
     text-align: left;
     margin-left: 15px;
     margin-bottom: -30px;
+}
+
+.remark-slide-content h1 {
+    font-size: 40px;
+}
+
+.remark-slide-content h2 {
+    font-size: 30px;
 }
